--- a/estil_pagina.css
+++ b/estil_pagina.css
@@ -63,6 +63,16 @@ img {
   box-shadow: 0px 0px 70px 20px rgba(168, 76, 0, 1);
 }
 
+video{
+  margin-top: 40px;
+  width: 80%;
+  z-index: 5;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  box-shadow: 0px 0px 70px 20px rgba(168, 76, 0, 1);
+}
+
 .text {
   width: 80%;
   color: peru;
